k8s/services/demo/rest1/manifests/deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "rest1"
  namespace: "default"
  labels:
    app: "rest1"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "rest1"
  template:
    metadata:
      labels:
        app: "rest1"
    spec:
      containers:
      - name: "rest1"
        image: "ghcr.io/gasilva-clgx/rest1"
        imagePullPolicy: "Always"
