k8s/services/demo/rest1/manifests/clusterIp.yml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: rest1-svc
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: rest1
  type: ClusterIP
