k8s/services/demo/rest1/manifests/loadBalancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rest1-service
spec:
  selector:
    app: rest1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
